--- a/crawler.ipynb
+++ b/crawler.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import urllib3\n",
-    "from urllib.parse import urljoin"
+    "from urllib.parse import urljoin\n",
+    "import re\n",
+    "import nltk"
    ]
   },
   {
@@ -20,8 +24,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def paginaIndexada(url):"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def crawl(paginas, profundidade):\n",
@@ -54,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -90,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in teste:\n",
@@ -100,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = open('links.txt', 'w') "
@@ -109,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for link in teste:\n",
@@ -119,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f.close()"
@@ -128,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -155,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# remover algumas tags\n",
@@ -175,104 +206,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "import re\n",
-    "import nltk"
+    "def separaPalavras(texto):\n",
+    "    splitter = re.compile('\\\\W*')\n",
+    "    stop = nltk.corpus.stopwords.words('portuguese')\n",
+    "    stemmer = nltk.stem.RSLPStemmer()\n",
+    "    lista_palavras = []\n",
+    "    lista = [p for p in splitter.split(texto) if p != '' ] \n",
+    "    for p in lista:\n",
+    "        if p.lower() not in stop and len(p) > 1:\n",
+    "            lista_palavras.append(stemmer.stem(p).lower())\n",
+    "            \n",
+    "    return lista_palavras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:6: FutureWarning: split() requires a non-empty pattern match.\n",
+      "/home/cloves/.local/lib/python3.5/site-packages/ipykernel_launcher.py:6: FutureWarning: split() requires a non-empty pattern match.\n",
       "  \n"
      ]
-    }
-   ],
-   "source": [
-    "splitter = re.compile('\\\\W*')\n",
-    "stop1 = ['é']\n",
-    "stop2 = nltk.corpus.stopwords.words('portuguese')\n",
-    "stop2.append('é')\n",
-    "lista_palavras = []\n",
-    "lista = [p for p in splitter.split('Este lugar é apavorante') if p != '' ] \n",
-    "for p in lista:\n",
-    "    if p.lower() not in stop2 and len(p) > 1:\n",
-    "        lista_palavras.append(p.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "['lugar', 'apavorante']"
+       "['lug', 'apavor']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista_palavras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Este', 'lugar', 'é', 'apavorante']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "204"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(stop2)"
+    "separaPalavras('Este lugar é apavorante')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -294,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
