--- a/crawler.ipynb
+++ b/crawler.ipynb
@@ -12,7 +12,8 @@
     "import urllib3\n",
     "from urllib.parse import urljoin\n",
     "import re\n",
-    "import nltk"
+    "import nltk\n",
+    "import py"
    ]
   },
   {
@@ -30,7 +31,8 @@
    },
    "outputs": [],
    "source": [
-    "def paginaIndexada(url):"
+    "def paginaIndexada(url):\n",
+    "    "
    ]
   },
   {
@@ -253,6 +255,57 @@
    ],
    "source": [
     "separaPalavras('Este lugar é apavorante')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conexão com BD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "DB = os.environ[\"NOME_DO_MEU_DB\"] \n",
+    "HOST = os.environ[\"HOST_DO_MEU_DB\"] \n",
+    "USER = os.environ[\"USUARIO_DO_MEU_DB\"]\n",
+    "PASS = os.environ[\"SENHA_DO_MEU_DB\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def conectar():\n",
+    "    conn_string = \"host='%s' dbname='%s' user='%s' password='%s'\" %(HOST, DB, USER, PASS)\n",
+    "    # print the connection string we will use to connect\n",
+    "    print (\"Connecting to database\\n-> %s\" % (conn_string))\n",
+    " \n",
+    "    # get a connection, if a connect cannot be made an exception will be raised here\n",
+    "    conn = psycopg2.connect(conn_string)\n",
+    " \n",
+    "    return conn"
    ]
   },
   {
