--- a/crawler.ipynb
+++ b/crawler.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -12,8 +12,7 @@
     "import urllib3\n",
     "from urllib.parse import urljoin\n",
     "import re\n",
-    "import nltk\n",
-    "import py"
+    "import nltk"
    ]
   },
   {
@@ -21,18 +20,6 @@
    "metadata": {},
    "source": [
     "# Crawler das urls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def paginaIndexada(url):\n",
-    "    "
    ]
   },
   {
@@ -56,6 +43,7 @@
     "                continue\n",
     "            \n",
     "            sopa = BeautifulSoup(dados_pagina.data, 'html')\n",
+    "            indexador(pagina, sopa)\n",
     "            links = sopa.find_all('a')\n",
     "            for link in links:\n",
     "                if 'href' in link.attrs:\n",
@@ -268,18 +256,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cloves/.local/lib/python3.5/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
+      "  \"\"\")\n"
+     ]
+    }
+   ],
    "source": [
-    "import os"
+    "import os\n",
+    "import psycopg2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -291,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -299,13 +297,363 @@
    "source": [
     "def conectar():\n",
     "    conn_string = \"host='%s' dbname='%s' user='%s' password='%s'\" %(HOST, DB, USER, PASS)\n",
-    "    # print the connection string we will use to connect\n",
-    "    print (\"Connecting to database\\n-> %s\" % (conn_string))\n",
-    " \n",
-    "    # get a connection, if a connect cannot be made an exception will be raised here\n",
-    "    conn = psycopg2.connect(conn_string)\n",
-    " \n",
-    "    return conn"
+    "    try:\n",
+    "        # get a connection, if a connect cannot be made an exception will be raised here\n",
+    "        conn = psycopg2.connect(conn_string)\n",
+    "        return conn\n",
+    "    except:\n",
+    "        print (\"Can't connected to database!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to database!\n"
+     ]
+    }
+   ],
+   "source": [
+    "con = conectar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verificação de páginas já indexadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def paginaIndexada(url):\n",
+    "    retorno = -1 # não exite página\n",
+    "    con  = conectar()\n",
+    "    cursorURL = con.cursor()\n",
+    "    cursorURL.execute(\"select idurl from buscas_em_textos.urls where url = '%s'\" %url)\n",
+    "    if cursorURL.rowcount > 0:\n",
+    "        #print('URL já cadastrada!')\n",
+    "        idurl = cursorURL.fetchone()[0]\n",
+    "        cursorPalava = con.cursor()\n",
+    "        cursorPalava.execute(\"select idurl from buscas_em_textos.palavra_localizacao \\\n",
+    "                             where idurl = '%s'\" %idurl)\n",
+    "        if cursorPalava.rowcount > 0:\n",
+    "            #print('Url com palavras')\n",
+    "            retorno = -2 # existe a página com palavras cadastradas\n",
+    "        else:\n",
+    "            #print('URL sem palavras')\n",
+    "            retorno = idurl # existe a página sem palavras\n",
+    "        cursorPalava.close()\n",
+    "    #else:\n",
+    "       # print ('URL não cadastrada!')\n",
+    "        \n",
+    "    cursorURL.close()\n",
+    "    con.close()\n",
+    "    \n",
+    "    return retorno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to database!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paginaIndexada('www.cloves.com')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Inclusão de URLs no índice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def inserPagina(url):\n",
+    "    con  = conectar()\n",
+    "    cursor = con.cursor()\n",
+    "    cursor.execute(\"select idurl from buscas_em_textos.urls;\")\n",
+    "    try:\n",
+    "        idpagina = cursor.fetchall()[-1][0] + 1\n",
+    "    except:\n",
+    "        idpagina = 0\n",
+    "    cursor.execute(\"insert into buscas_em_textos.urls (idurl, url) values(%d,'%s')\" %(idpagina,url))\n",
+    "    con.commit()\n",
+    "    cursor.close()\n",
+    "    con.close()\n",
+    "    return idpagina"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to database!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inserPagina('www.teste4.com')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verificação de palavras já indexadas "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def palavraIndexada(palavra):\n",
+    "    retorno = -1 # não existe a palavra no índice\n",
+    "    con  = conectar()\n",
+    "    cursor = con.cursor()\n",
+    "    cursor.execute(\"select idpalavra from buscas_em_textos.palavras where palavra = '%s'\" %palavra)\n",
+    "    if cursor.rowcount > 0:\n",
+    "        #print('palavra já cadastrada')\n",
+    "        retorno = cursor.fetchone()[0]\n",
+    "    #else:\n",
+    "        #print('palavra não cadastrada')\n",
+    "    cursor.close()\n",
+    "    con.close()\n",
+    "    return retorno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palavraIndexada('cloves')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inclusão de Palavras no Índice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def inserePalavra(palavra):\n",
+    "    con  = conectar()\n",
+    "    cursor = con.cursor()\n",
+    "    cursor.execute(\"select idpalavra from buscas_em_textos.palavras;\")\n",
+    "    \n",
+    "    try:\n",
+    "        idpalavra = cursor.fetchall()[-1][0] + 1\n",
+    "    except:\n",
+    "        idpalavra = 0\n",
+    "        \n",
+    "    cursor.execute(\"insert into buscas_em_textos.palavras (idpalavra, palavra) \\\n",
+    "                    values(%d, '%s')\" %(idpalavra, palavra))\n",
+    "    \n",
+    "    con.commit()\n",
+    "    cursor.close()\n",
+    "    con.close()\n",
+    "    return idpalavra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inserePalavra('teste2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inclusão das palavras do documento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def inserPalavraLocalizacao(idurl, idpalavra, localizacao):\n",
+    "    con  = conectar()\n",
+    "    cursor = con.cursor()\n",
+    "    cursor.execute(\"select idpalavra_localizacao from buscas_em_textos.palavra_localizacao;\")\n",
+    "    try:\n",
+    "        idpalavra_localizacao = cursor.fetchall()[-1][0] + 1\n",
+    "    except:\n",
+    "        idpalavra_localizacao = 0\n",
+    "        \n",
+    "    query = \"insert into buscas_em_textos.palavra_localizacao \\\n",
+    "            (idpalavra_localizacao, idurl, idpalavra, localizacao) \\\n",
+    "            values(%d, %d, %d, %d)\" %(idpalavra_localizacao,idurl,idpalavra,localizacao)\n",
+    "    \n",
+    "    cursor.execute(query)\n",
+    "    con.commit()\n",
+    "    cursor.close()\n",
+    "    con.close()\n",
+    "    return idpalavra_localizacao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inserPalavraLocalizacao(0, 1, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Indexador Completo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def indexador(url, sopa):\n",
+    "    indexada = paginaIndexada(url)\n",
+    "    if indexada == -2:\n",
+    "        print(\"url já indexada!\")\n",
+    "        return\n",
+    "    elif indexada == -1:\n",
+    "        idnova_pagina = inserPagina(url)"
    ]
   },
   {
