--- a/crawler.ipynb
+++ b/crawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -97,74 +97,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for i in teste:\n",
-    "    type(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "f = open('links.txt', 'w') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for link in teste:\n",
-    "    f.write('%s' %link)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "55566"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(teste)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -196,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -254,20 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cloves/.local/lib/python3.5/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-      "  \"\"\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import psycopg2"
@@ -275,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -300,6 +223,7 @@
     "    try:\n",
     "        # get a connection, if a connect cannot be made an exception will be raised here\n",
     "        conn = psycopg2.connect(conn_string)\n",
+    "        conn.set_client_encoding('UNICODE')\n",
     "        return conn\n",
     "    except:\n",
     "        print (\"Can't connected to database!\")"
@@ -307,19 +231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to database!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "con = conectar()"
    ]
@@ -344,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -426,9 +342,10 @@
     "def inserPagina(url):\n",
     "    con  = conectar()\n",
     "    cursor = con.cursor()\n",
-    "    cursor.execute(\"select idurl from buscas_em_textos.urls;\")\n",
+    "    cursor.execute(\"select idurl from buscas_em_textos.urls\\\n",
+    "                    order by idurl desc limit 1\")\n",
     "    try:\n",
-    "        idpagina = cursor.fetchall()[-1][0] + 1\n",
+    "        idpagina = cursor.fetchall()[0][0] + 1\n",
     "    except:\n",
     "        idpagina = 0\n",
     "    cursor.execute(\"insert into buscas_em_textos.urls (idurl, url) values(%d,'%s')\" %(idpagina,url))\n",
@@ -476,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -528,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -537,10 +454,11 @@
     "def inserePalavra(palavra):\n",
     "    con  = conectar()\n",
     "    cursor = con.cursor()\n",
-    "    cursor.execute(\"select idpalavra from buscas_em_textos.palavras;\")\n",
+    "    cursor.execute(\"select idpalavra from buscas_em_textos.palavras \\\n",
+    "                    order by idpalavra desc limit 1\")\n",
     "    \n",
     "    try:\n",
-    "        idpalavra = cursor.fetchall()[-1][0] + 1\n",
+    "        idpalavra = cursor.fetchall()[0][0] + 1\n",
     "    except:\n",
     "        idpalavra = 0\n",
     "        \n",
@@ -584,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -593,9 +511,10 @@
     "def inserPalavraLocalizacao(idurl, idpalavra, localizacao):\n",
     "    con  = conectar()\n",
     "    cursor = con.cursor()\n",
-    "    cursor.execute(\"select idpalavra_localizacao from buscas_em_textos.palavra_localizacao;\")\n",
+    "    cursor.execute(\"select idpalavra_localizacao from buscas_em_textos.palavra_localizacao \\\n",
+    "                    order by idpalavra_localizacao desc limit 1\")\n",
     "    try:\n",
-    "        idpalavra_localizacao = cursor.fetchall()[-1][0] + 1\n",
+    "        idpalavra_localizacao = cursor.fetchall()[0][0] + 1\n",
     "    except:\n",
     "        idpalavra_localizacao = 0\n",
     "        \n",
@@ -641,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -650,10 +569,23 @@
     "def indexador(url, sopa):\n",
     "    indexada = paginaIndexada(url)\n",
     "    if indexada == -2:\n",
-    "        print(\"url já indexada!\")\n",
+    "        print(\"URL já indexada!\")\n",
     "        return\n",
     "    elif indexada == -1:\n",
-    "        idnova_pagina = inserPagina(url)"
+    "        idnova_pagina = inserPagina(url)\n",
+    "    elif indexada > 0:\n",
+    "        idnova_pagina = indexada\n",
+    "    \n",
+    "    print(\"Indexando \" + url)\n",
+    "    \n",
+    "    texto = getTexto(sopa)\n",
+    "    palavras = separaPalavras(texto)\n",
+    "    for i in range(len(palavras)):\n",
+    "        palavra = palavras[i]\n",
+    "        idpalavra = palavraIndexada(palavra)\n",
+    "        if idpalavra == -1:\n",
+    "            idpalavra = inserePalavra(palavra)\n",
+    "        inserPalavraLocalizacao(idnova_pagina, idpalavra, i)"
    ]
   },
   {
